# stow-cm

./: .gitignore  AGENTS.md  CHANGE_LOG.md  Cargo.toml  Makefile  README.md  build.rs  justfile  rustfmt.toml
.github/: release.yml
.github/workflows/: build.yml  ci.yml  nightly.yml  release.yml
aur/: .SRCINFO  PKGBUILD
aur-nightly/: .SRCINFO  PKGBUILD
src/: base64.rs  cli.rs  cli_types.rs  collect_bot.rs  command.rs  config.rs  constants.rs  crypto.rs  custom_type.rs  dev.rs  error.rs  executor.rs  ignore.rs  main.rs  merge.rs  merge_tree.rs  paths.rs  symlink.rs  track_file.rs  util.rs
src/command/: adopt.rs  clean.rs  crypto.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs  status.rs
stow-cm-macros/: Cargo.toml
stow-cm-macros/src/: lib.rs
templates/: default-config.toml  reference-config.toml
