[package]
name = "stow-cm"
version = "0.16.0"
authors = ["someone"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
same-file = "1"
toml = "0"
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
log = { version = "0" }
env_logger = "0"
futures = "0"
walkdir = "2"
async-trait = "0"
const_format = { version = "0" }
crypto = { version = "0", features = [
  "aead",
  "cipher",
  "digest",
  "elliptic-curve",
] }
ring = { version = "0", features = ["std"] }
base64 = "0"
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
sha3 = "0"
maplit = "1"
lazy-regex = "3"
binaryornot = "1"

# ignore = "0"
# xattr = "0"

[dependencies.regex]
version = "1"
default-features = true
# features = ["std"]

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
# options["none", "debuginfo", "symbols", true, false]
# the default is "none", true = "symbols", false = "none"
strip = true

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
exit = "deny"
expect_used = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_on_vec_items = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
todo = "deny"
unchecked_duration_subtraction = "deny"
unimplemented = "deny"
unreachable = "allow"
unwrap_used = "deny"
too_many_lines = "allow"
