[workspace]
members = ["stow-cm-macros"]

[package]
name = "stow-cm"
version = "0.17.1"
authors = ["someone"]
edition = "2024"

[dependencies]
stow-cm-macros = { path = "stow-cm-macros" }
same-file = "1"
toml = "0"
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
log = { version = "0" }
env_logger = "0"
futures = "0"
walkdir = "2"
async-trait = "0"
const_format = { version = "0" }
# merge = "0"
# merge = { git = "https://git.sr.ht/~ireas/merge-rs", branch = "master" }
merge = { git = "https://github.com/someoneonsmile/merge-rs", branch = "main" }
crypto = { version = "0", features = [
  "aead",
  "cipher",
  "digest",
  "elliptic-curve",
] }
ring = { version = "0", features = ["std"] }
base64 = "0"
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
sha3 = "0"
maplit = "1"
lazy-regex = "3"
binaryornot = "1"
hex = "0"

# ignore = "0"
# xattr = "0"

[dependencies.regex]
version = "1"
default-features = true
# features = ["std"]

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
# options["none", "debuginfo", "symbols", true, false]
# the default is "none", true = "symbols", false = "none"
strip = true

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
exit = "deny"
expect_used = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"

match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
todo = "deny"
unchecked_time_subtraction = "deny"
unimplemented = "deny"
unreachable = "allow"
unwrap_used = "deny"
too_many_lines = "allow"
